--- a/dauber.html
+++ b/dauber.html
@@ -124,7 +124,7 @@
             Kingsizeは、その書籍の名のごとく大きなマーカーで、当時としては見ることがなかったであろう50mmの太さのマーカーの開発をしていく過程と、世界で活躍するライターたちに配布して実際に使用しているアクションを記録したもの。そしてadamsの序文、NYで初期にグラフィティライターの青年たちへのインタビューを行い書籍[getting up]を著したCraig Castlemanによる文章、世界大戦後グローバリズムが進む中で世界中にアメリカニゼーションが浸透していく様子と、その影響を受けるスウェーデン社会を捉えたAndreas Bergの論述で構成されていた。
             先にも述べたように匿名性やクルーという性質を持つグラフィティカルチャーは、しばしばその細かな流れや背景等が、記録からもれ抜け落ちてしまうことが多い。その意味で世界のグローバリズムの中でグラフィティがNewYorkで広がっていく風景と、その後世界中に広がったていった背景、スウェーデン1国の背景や流れを後世に残る形でドキュメントしていたこの書籍の役割は大きい。
 
-            ではkingsizeが出版されてから16年が経過した今、路上で活動を続けるライターたちにとってのDIYマーカーやツール、それだけでなくgraffitiはどう変化したのだろうか、このプロジェクトではkingsizeを参照としながら、現代とりわけ2010年代以降のデジタルテクノロジーの発展とともに発生したメーカーズムーブメント的手法をもとに3Dソフトによるモデリングから、ソーシャルネットワーキングによる情報共有、拡散を行い、現代におけるDIYマーカーのあり方を探る。
+            ではkingsizeが出版されてから16年が経過した今、路上で活動を続けるライターたちにとってのDIYマーカーやツール、それだけでなくgraffitiはどう変化したのだろうか、このプロジェクトではkingsizeを参照しながら、現代とりわけ2010年代以降のデジタルテクノロジーの発展とともに発生したメーカーズムーブメント的手法をもとに3Dソフトによるモデリングから、ソーシャルネットワーキングによる情報共有、拡散を行い、現代におけるDIYマーカーのあり方を探る。
             </font></p>
             <p class="lead" data-toggle="tooltip" data-placement="bottom" title="File DownLoad"><a href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z" class="btn btn-primary btn-lg btn-block"><font >Dauber STL FILE</font></a></p>
           </div>
@@ -187,6 +187,14 @@
       </div>
     </div>
   </div>
+  <div id="main02">
+    <div class="container">
+      <div class="col-md-12">
+        <p class="lead" data-toggle="tooltip" data-placement="bottom" title="File DownLoad"><a href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z" class="btn btn-primary btn-lg btn-block"><font >Dauber STL FILE</font></a></p>
+      </div>
+    </div>
+  </div>
+
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
