--- a/dauber.html
+++ b/dauber.html
@@ -110,7 +110,7 @@
         <div class="col-md-6">
           <div class="inner cover">
             <h1 class="cover-heading">
-                <font>Dauber Project</font>
+                <font>DAUBER Project</font>
               </h1>
             <p><font >2004年SwedenのA5pressからKingsize DIY marker & globalization of Graffitiと題された書籍が発行された。
             これは私が知る限り唯一、DIYマーカー自体とその背景について記録された書籍である。
@@ -126,7 +126,6 @@
 
             ではkingsizeが出版されてから16年が経過した今、路上で活動を続けるライターたちにとってのDIYマーカーやツール、それだけでなくgraffitiはどう変化したのだろうか、このプロジェクトではkingsizeを参照しながら、現代とりわけ2010年代以降のデジタルテクノロジーの発展とともに発生したメーカーズムーブメント的手法をもとに3Dソフトによるモデリングから、ソーシャルネットワーキングによる情報共有、拡散を行い、現代におけるDIYマーカーのあり方を探る。
             </font></p>
-            <p class="lead" data-toggle="tooltip" data-placement="bottom" title="File DownLoad"><a href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z" class="btn btn-primary btn-lg btn-block"><font >Dauber STL FILE</font></a></p>
           </div>
         </div>
         <!--text-->
@@ -190,7 +189,12 @@
   <div id="main02">
     <div class="container">
       <div class="col-md-12">
-        <p class="lead" data-toggle="tooltip" data-placement="bottom" title="File DownLoad"><a href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z" class="btn btn-primary btn-lg btn-block"><font >Dauber STL FILE</font></a></p>
+        <div class="inner cover">
+          <h1 class="cover-heading">
+            <font>DAUBER DATE</font>
+          </h1>
+          <p class="lead" data-toggle="tooltip" data-placement="bottom" title="File DownLoad"><a href="https://drive.google.com/uc?export=download&id=1yYbYi30VRVCjlZNxR5OQgPwb73Ud52-z" class="btn btn-primary btn-lg btn-block"><font >Dauber STL FILE</font></a></p>
+        </div>
       </div>
     </div>
   </div>
