--- a/project.html
+++ b/project.html
@@ -95,29 +95,28 @@
   <!--content start-->
   <!--text-->
   <div class="container">
-
-    <div class="col-md-12">
-      <div class="grid_row">
-        <div class="row_first">
-          <a href="dauber.html">
+    <a href="dauber.html">
+      <div class="col-md-12">
+        <div class="grid_row">
+          <div class="row_first">
             <div class="col-1"><small>01</small></div>
             <div class="col-1 "><small>2020</small></div>
             <div class="col-6"><small>Dauber Side</small></div>
-          </a>
+          </div>
         </div>
       </div>
-    </div>
+    </a>
+    <a href="Sketch.html"></a>
     <div class="col-md-12">
       <div class="grid_row">
         <div class="row">
-          <a href="Sketch.html">
-            <div class="col-1"><small>02</small></div>
-            <div class="col-1 "><small>2020</small></div>
-            <div class="col-6"><small>Sketch</small></div>
-          </a>
+          <div class="col-1"><small>02</small></div>
+          <div class="col-1 "><small>2020</small></div>
+          <div class="col-6"><small>Sketch</small></div>
         </div>
       </div>
     </div>
+    </a>
   </div>
 
 
