--- a/dauber.html
+++ b/dauber.html
@@ -26,9 +26,11 @@
             <div class="dropdown-menu folder-child-wrapper">
               <ul class="folder-child">
                 　<li><a class="dropdown-item" href="index.html">
-                    <p>home</p></a></li>
+                    <p>home</p>
+                  </a></li>
                 <li><a class="dropdown-item" href="project.html">
-                    <p>project</p></a></li>
+                    <p>project</p>
+                  </a></li>
                 <!--<li><a class="dropdown-item" href="#">Another action</a><li>-->
               </ul>
             </div>
@@ -61,7 +63,8 @@
               <div class="form-group">
                 <textarea name="entry.2108942869" class="form-control" id="message" placeholder="Message" maxlength="140" rows="7"></textarea>
                 <span class="help-block">
-                  <p id="characterLeft" class="help-block ">Up to 140 characters</p></span>
+                  <p id="characterLeft" class="help-block ">Up to 140 characters</p>
+                </span>
               </div>
               <div class="modal-footer">
                 <div class="btn-group btn-group-justified" role="group" aria-label="group button">
@@ -124,7 +127,7 @@
           </div>
         </div>
         <!--text-->
-        <div class="col-md-">
+        <div class="col-md-6">
           <div class="grid_row">
             <div class="row">
               <div class="col-3"><small>Project name</small></div>
