--- a/Sketch.html
+++ b/Sketch.html
@@ -89,10 +89,10 @@
   <!-- modal fade goes here end-->
 
   <!-- main goes here start-->
-  <div id="content">
-    <div class="col-lg-12"></div>
+  <div class="container">
+    <div class="col-md-12"></div>
     <!-- Example row of columns -->
-    <div class="row" style="max-width:1000px; width:100%; margin: 0 auto;">
+    <div class="row">
       <a href="#">
         <div class="col-md-2">
           <img src="https://placehold.jp/600x600.png" class="img-responsive center-block">
