--- a/chat.html
+++ b/chat.html
@@ -1,36 +1,197 @@
-<div class="container">
-  <div class="row">
-    <div class="col-sm-12">
-      <article class="chat">
-        <header class="chat-header">
-          <div class="h3 chat-title">Roux Chat
-          </div><!-- chat-title -->
-        </header><!-- chat-header -->
-        <form name="chatForm" class="form-horizontal chat-form">
-          <div class="form-group">
-            <label for="chat-username" class="col-sm-2 control-label">Name</label>
-            <div class="col-sm-10">
-              <input type="text" class="form-control" id="chat-username" required placeholder="Enter your name">
-            </div><!-- col-sm-10 -->
-          </div><!-- form-group -->
-          <div class="form-group">
-            <label for="chat-message" class="col-sm-2 control-label">Message</label>
-            <div class="col-sm-10">
-              <div class="input-group">
-                <input type="text" placeholder="Enter a message, then press enter" class="form-control" id="chat-message" rows="2" autocomplete="off" required>
-                <span class="input-group-btn">
-                  <button id="chat-submit" class="btn btn-info" type="submit">Chat</button>
-                </span>
-              </div><!-- input-group -->
-            </div><!-- col-sm-10 -->
-          </div><!-- form-group -->
-        </form>
-        <div class="panel panel-default">
-          <div class="panel-body chat-display">
-            <p class="text-muted chat-text">Welcome...add your message using the form above</p>
-          </div><!-- panel-body -->
-        </div><!-- panel-default -->
-      </article><!-- article -->
-    </div><!-- col-sm-12 -->
-  </div><!-- row -->
-</div><!-- container -->
+<style>
+  /*Downloaded from https://www.codeseek.co/arianalynn/live-chat-20-built-with-google-formsspreadsheet-JZEGXZ */
+  @import url("https://fonts.googleapis.com/css?family=Montserrat:400,400i,700");
+  @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    position: relative;
+    font-family: Montserrat, sans-serif;
+  }
+
+  *:focus {
+    outline: none;
+  }
+
+  body {
+    background-color: #e9bbab;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 900'%3E%3Cpath fill='%23f6ded4' d='M0 504 0 899 1600 899 1600 120z'/%3E%3Cpath fill='%23e0cbc1' d='M1600 567 1600 899 0 899 0 165z'/%3E%3Cpath fill='%23854e4b' d='M0 680 0 899 1600 899 1600 300z'/%3E%3Cpath fill='%23b06763' d='M1600 719 1600 899 0 899 0 353z'/%3E%3Cpath fill='%23482426' d='M0 788 0 899 1600 899 1600 625z'/%3E%3C/svg%3E");
+    /* background by SVGBackgrounds.com */
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
+  }
+
+  .chat_box {
+    width: 340px;
+    height: 420px;
+    margin: calc(50vh - 208px) auto;
+    background: #eeeeee;
+    border-radius: 10px;
+    box-shadow: 0 0 55px -12px #616161;
+    overflow: hidden;
+  }
+
+  .chat_h {
+    background: #fafafa;
+    padding: 18px 20px;
+    box-shadow: 0 1px 5px silver;
+    text-align: center;
+    margin-bottom: 10px;
+  }
+
+  .chat_h i {
+    font-size: 21px;
+    color: #757575;
+    cursor: pointer;
+  }
+
+  .chat_h div {
+    font-size: 16px;
+    color: #854e4b;
+    display: inline;
+  }
+
+  .chat_b {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding: 20px 22px;
+  }
+
+  .chat_b input[type="text"] {
+    width: 230px;
+    border-radius: 20px;
+    border: none;
+    padding: 16px 22px;
+    box-shadow: 0 3px 10px -2px grey;
+  }
+
+  .chat_b input[type="submit"] {
+    background: #b06763;
+    border: none;
+    color: white;
+    padding: 12px 10px 12px 14px;
+    font-size: 23px;
+    border-radius: 100%;
+    cursor: pointer;
+    float: right;
+    box-shadow: 0 0 30px -2px grey;
+  }
+
+  .chat_b input[type="submit"]:hover {
+    background: #854e4b;
+  }
+
+  .chat {
+    padding: 15px 20px;
+    display: inline-block;
+    clear: both;
+    margin-top: 10px;
+    font-size: 14px;
+    word-wrap: break-word;
+    max-width: 78%;
+  }
+
+  .chat_me {
+    background: #854e4b;
+    color: white;
+    float: right;
+    margin-right: 20px;
+    border-radius: 13px 13px 0 13px;
+  }
+
+  .chat_ar {
+    background: #f6ded4;
+    color: #212121;
+    float: left;
+    margin-left: 20px;
+    border-radius: 13px 13px 13px 0;
+  }
+
+  .chat_s {
+    height: 270px;
+    overflow-y: scroll;
+  }
+
+  ::-webkit-scrollbar {
+    width: 15px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 0 5px #eeeeee;
+    background: rgba(0, 0, 0, 0.1);
+  }
+</style>
+<script>
+  /*Downloaded from https://www.codeseek.co/arianalynn/live-chat-20-built-with-google-formsspreadsheet-JZEGXZ */
+  function chat_send() {
+    document.getElementsByClassName("chat_s")[0].innerHTML +=
+      '<div class="chat chat_me">' +
+      document.getElementById("entry_1852610060").value +
+      "</div>";
+    chat_tobottom();
+    document.getElementById("entry_1852610060").value = "";
+  }
+
+  function chat_tobottom() {
+    document.getElementsByClassName(
+      "chat_s"
+    )[0].scrollTop = document.getElementsByClassName("chat_s")[0].scrollHeight;
+  }
+
+  function chat_load() {
+    document.getElementsByClassName("chat_s")[0].innerHTML =
+      "<p style='margin:20px'>Loading...</p>";
+    $.getJSON(
+      "https://spreadsheets.google.com/feeds/list/1OPUaP9h2uI0971ZARc_DG4oAGG1CSQncmW7tkkkFXCw/od6/public/values?alt=json",
+      function (data) {
+        document.getElementsByClassName("chat_s")[0].innerHTML = "";
+        for (var i = 0; i < data.feed.entry.length; i++) {
+          var entry = data.feed.entry[i];
+          var a;
+          if (entry.gsx$name.$t == "Ariana") {
+            a = "chat_ar";
+          } else {
+            a = "chat_me";
+          }
+          document.getElementsByClassName("chat_s")[0].innerHTML +=
+            '<div class="chat ' +
+            a +
+            '">' +
+            entry.gsx$message.$t +
+            "</div>";
+        }
+      }
+    );
+  }
+
+  chat_load();
+</script>
+
+<div class="chat_box">
+  <div class="chat_h">
+    <i title="ee button emi cheyadu" style="float:left" class="material-icons">arrow_back_ios</i>
+    <div><span title="It looks like I'm online, doesn't it?" style="color:#68d883;font-size:23px; line-height:15px">&#x25CF;</span> ARIANA LYNN</div>
+    <i onclick="chat_load()" title="Refresh Chat to Get Latest Messages." style="float:right" class="material-icons">replay</i>
+  </div>
+  <div class="chat_b">
+    <script type="text/javascript">
+      var submitted = false;
+    </script>
+    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted){chat_send()}"></iframe>
+    <form onsubmit="submitted=true" action="https://docs.google.com/forms/d/e/1FAIpQLSd-8wkxgXbOXhV47ma05LR8iQzaJZxeFPq0V7ABRRIXPbTYbA/formResponse" method="POST" target="hidden_iframe">
+      <input type="text" placeholder="Type a message..." name="entry.1852610060" id="entry.1852610060" />
+      <input type="hidden" name="draftResponse" value="null,null,&quot;-1766445210298050477&quot;]" />
+      <input type="hidden" name="pageHistory" value="0" />
+      <input type="hidden" name="fbzx" value="-1766445210298050477" />
+      <input type="submit" class="material-icons" name="submit" value="send" id="ss-submit" onclick="return chat_check()" />
+    </form>
+  </div>
+  <div class="chat_s">
+  </div>
+  <i title="Scroll to bottom." style="position:absolute;bottom:80px;left:22px;background:white;color:#9E9E9E;cursor:pointer;border-radius:100%;box-shadow:0 0 15px -3px grey" class="material-icons" onclick="chat_tobottom()">expand_more</i>
+</div>
