--- a/dauber_en.html
+++ b/dauber_en.html
@@ -153,13 +153,20 @@
               <div class="col-3 "><small>Scale</small></div>
               <div class="col-2"><small>Date</small></div>
             </div>
-
             <div class="row toybox">
               <div class="col-3 toybox"><small>"R40”</small></div>
               <div class="col-3 toybox"><small>1:1</small></div>
-              <div class="col-2 toybox"><small>:></small></div>
+              <div class="col-2 toybox"><small>STL File :></small></div>
               <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/uc?export=download&id=1Z36XGW-bnS2ZOkM8trBq-2ODIm-CBcfe"><small>Download</small></a>
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1nbiVe2sHNehlJChQVnMr7QUlOfoX5pZN"><small>Download</small></a>
+              </div>
+            </div>
+            <div class="row toybox">
+              <div class="col-3 toybox"><small>"R40”</small></div>
+              <div class="col-3 toybox"><small>1:1</small></div>
+              <div class="col-2 toybox"><small>Ender File :></small></div>
+              <div class="col-3 toybox">
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1kSqdAPFoCiLDpNLowPzPIJiV4NtbDzcK"><small>Download</small></a>
               </div>
             </div>
             <!-- <div class="row toybox">
