--- a/dauber_backup_test.html
+++ b/dauber_backup_test.html
@@ -151,7 +151,7 @@
             </div>
             <!--target end-->
             <!--target  collapseExample stary-->
-            <div id="collapseExample" class="col-md-6">
+            <div id="collapseExample" class="col-md-6 collapse">
               <div class="row toybox">
                 <div class="col-3"><small>Size</small></div>
                 <div class="col-3 "><small>Scale</small></div>
