--- a/dauber_backup_test.html
+++ b/dauber_backup_test.html
@@ -149,34 +149,36 @@
               <div class="col-3"><small>"norma”</small></div>
               <div class="col-3 "><small><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">Magic ink</a></small></div>
             </div>
-            <!--target end-->
-            <!--target  collapseExample stary-->
-            <div id="collapseExample" class="collapse">
-              <div class="row toybox">
-                <div class="col-3"><small>Size</small></div>
-                <div class="col-3 "><small>Scale</small></div>
-                <div class="col-2"><small>Date</small></div>
-              </div>
-              <div class="row ">
-                <div class="col-3 toybox"><small>"R40”</small></div>
-                <div class="col-3 toybox"><small>1:1</small></div>
-                <div class="col-2 toybox"><small>Blender</small></div>
-                <div class="col-3 toybox">
-                  <a class="button" href="https://drive.google.com/uc?export=download&id=1nbiVe2sHNehlJChQVnMr7QUlOfoX5pZN"><small>Download</small></a>
-                </div>
-              </div>
-              <div class="row ">
-                <div class="col-3 toybox"><small>"R40”</small></div>
-                <div class="col-3 toybox"><small>1:1</small></div>
-                <div class="col-2 toybox"><small>STL</small></div>
-                <div class="col-3 toybox">
-                  <a class="button" href="https://drive.google.com/uc?export=download&id=1nbiVe2sHNehlJChQVnMr7QUlOfoX5pZN"><small>Download</small></a>
-                </div>
+          </div>
+          <!--target end-->
+          <!--target  collapseExample stary-->
+          <div id="collapseExample" class="grid_row collapse">
+            <div class="row toybox">
+              <div class="col-3"><small>Size</small></div>
+              <div class="col-3 "><small>Scale</small></div>
+              <div class="col-2"><small>Date</small></div>
+            </div>
+            <div class="row ">
+              <div class="col-3 toybox"><small>"R40”</small></div>
+              <div class="col-3 toybox"><small>1:1</small></div>
+              <div class="col-2 toybox"><small>Blender</small></div>
+              <div class="col-3 toybox">
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1nbiVe2sHNehlJChQVnMr7QUlOfoX5pZN"><small>Download</small></a>
               </div>
             </div>
-            <!--target  collapseExample -->
+            <div class="row ">
+              <div class="col-3 toybox"><small>"R40”</small></div>
+              <div class="col-3 toybox"><small>1:1</small></div>
+              <div class="col-2 toybox"><small>STL</small></div>
+              <div class="col-3 toybox">
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1nbiVe2sHNehlJChQVnMr7QUlOfoX5pZN"><small>Download</small></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--target  collapseExample -->
 
-            <!-- <div class="row toybox">
+        <!-- <div class="row toybox">
               <div class="col-3 toybox"><small>"R40”</small></div>
               <div class="col-3 toybox"><small>1:1</small></div>
               <div class="col-2 toybox"><small>STL</small></div>
@@ -184,41 +186,41 @@
                 <a class="button" href="https://drive.google.com/uc?export=download&id=1qqnBMPsf1PmDYKKR3VR1C-dbfWz3aXw6"><small>Download_Some_parts</small></a>
               </div>
             </div> -->
-          </div>
-        </div>
-        <!--text-->
 
-        <div class="col-md-6">
+      </div>
+      <!--text-->
 
-          <!--carousel-custom-->
+      <div class="col-md-6">
 
-          <div id="carousel-custom" class="carousel slide" data-ride="carousel">
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner" role="listbox">
-              <div class="item active">
-                <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="600" width="600">
-              </div>
-              <div class="item ">
-                <img src="https://i.pinimg.com/originals/67/74/44/67744483dc93a57ad7ca552cd4b919f5.png" alt="..." class="img-responsive center-block" height="600" width="600">
-              </div>
-              <div class="item ">
-                <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="600" width="600">
-              </div>
+        <!--carousel-custom-->
+
+        <div id="carousel-custom" class="carousel slide" data-ride="carousel">
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+              <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="600" width="600">
             </div>
+            <div class="item ">
+              <img src="https://i.pinimg.com/originals/67/74/44/67744483dc93a57ad7ca552cd4b919f5.png" alt="..." class="img-responsive center-block" height="600" width="600">
+            </div>
+            <div class="item ">
+              <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="600" width="600">
+            </div>
+          </div>
 
-            <!-- Controls -->
-            <!---->
-            <a class="left carousel-control" href="#carousel-custom" role="button" data-slide="prev">
-              <!--<span class="fas fa-arrow-left"></span>-->
-            </a>
-            <a class="right carousel-control" href="#carousel-custom" role="button" data-slide="next">
-              <!--<span class="fas fa-arrow-right"></span>-->
-            </a>
-            <!---->
+          <!-- Controls -->
+          <!---->
+          <a class="left carousel-control" href="#carousel-custom" role="button" data-slide="prev">
+            <!--<span class="fas fa-arrow-left"></span>-->
+          </a>
+          <a class="right carousel-control" href="#carousel-custom" role="button" data-slide="next">
+            <!--<span class="fas fa-arrow-right"></span>-->
+          </a>
+          <!---->
 
 
-            <!-- Indicators start-->
-            <!--<ol class="carousel-indicators visible-sm-block hidden-xs-block visible-md-block visible-lg-block">
+          <!-- Indicators start-->
+          <!--<ol class="carousel-indicators visible-sm-block hidden-xs-block visible-md-block visible-lg-block">
               <li data-target="#carousel-custom" data-slide-to="0" class="active">
                 <img src="https://i.pinimg.com/originals/63/18/6d/63186d8b8cee97e766f2dd7b49b8a35c.png" alt="..." class="img-responsive center-block" height="60" width="60">
               </li>
@@ -229,24 +231,24 @@
                 <img src="https://i.pinimg.com/originals/3e/ba/3b/3eba3b25bac88bc0c73dae32845397f6.png" alt="..." class="img-responsive center-block" height="60" width="60">
               </li>
             </ol>-->
-            <!--Indicators end-->
-          </div>
-
-          <!--carousel-custom-->
+          <!--Indicators end-->
         </div>
-      </div>
 
-    </div>
-
-    <!--productNav start-->
-    <div id="main">
-      <div class="container">
-        <div id="productNav_footer" class="col-md-12">
-          <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
-        </div>
+        <!--carousel-custom-->
       </div>
     </div>
-    <!--productNav end-->
+
+  </div>
+
+  <!--productNav start-->
+  <div id="main">
+    <div class="container">
+      <div id="productNav_footer" class="col-md-12">
+        <!--<a href="project.html"><span class="back-arrow">←</span> Back to Project </a>-->
+      </div>
+    </div>
+  </div>
+  <!--productNav end-->
 
   </div>
 
