--- a/dauber_backup_test.html
+++ b/dauber_backup_test.html
@@ -166,7 +166,7 @@
                 <a class="button" href="https://drive.google.com/uc?export=download&id=1DrEktkGzog38z0WqG1PuF-_L1zw2BdzC"><small>Download</small></a>
               </div>
             </div>
-            <div class="row ">
+            <div class="row toybox">
               <div class="col-3 toybox"><small>"R40”</small></div>
               <div class="col-3 toybox"><small>1:1</small></div>
               <div class="col-2 toybox"><small>STL</small></div>
