--- a/dauber_en.html
+++ b/dauber_en.html
@@ -146,40 +146,53 @@
               <div class="col-3 toybox"><small>20200701</small></div>
               <div class="col-2 toybox"><small>TOKYO</small></div>
             </div>
-          </div>
-          <div class="grid_row">
+            <!--target staryt-->
             <div class="row">
+              <div class="col-3"><small>"norma”</small></div>
+              <div class="col-4"><small><a data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">Magic ink</a></small></div>
+            </div>
+            <!--target end-->
+          </div>
+
+        </div>
+        <!--target  collapseExample stary-->
+        <div id="collapseExample" class="col-md-6 collapse">
+          <div class="grid_row">
+            <div class="row toybox">
               <div class="col-3"><small>Size</small></div>
               <div class="col-3 "><small>Scale</small></div>
               <div class="col-2"><small>Date</small></div>
             </div>
-
+            <div class="row ">
+              <div class="col-3 toybox"><small>"R40”</small></div>
+              <div class="col-3 toybox"><small>1:1</small></div>
+              <div class="col-2 toybox"><small>Blender</small></div>
+              <div class="col-3 toybox">
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1DrEktkGzog38z0WqG1PuF-_L1zw2BdzC"><small>Download</small></a>
+              </div>
+            </div>
             <div class="row toybox">
               <div class="col-3 toybox"><small>"R40”</small></div>
               <div class="col-3 toybox"><small>1:1</small></div>
               <div class="col-2 toybox"><small>STL</small></div>
               <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/uc?export=download&id=1nbiVe2sHNehlJChQVnMr7QUlOfoX5pZN"><small>Download</small></a>
+                <a class="button" href="https://drive.google.com/uc?export=download&id=1teXxe6qWTb7fLHLPFZ9TUdE8JbpoZ_4T"><small>Download</small></a>
               </div>
             </div>
-            <div class="row toybox">
-              <div class="col-3 toybox"><small>"R40”</small></div>
-              <div class="col-3 toybox"><small>1:1</small></div>
-              <div class="col-2 toybox"><small>Gcode</small></div>
-              <div class="col-3 toybox">
-                <a class="button" href="https://drive.google.com/uc?export=download&id=1kSqdAPFoCiLDpNLowPzPIJiV4NtbDzcK"><small>Download</small></a>
-              </div>
-            </div>
-            <!-- <div class="row toybox">
-                      <div class="col-3 toybox"><small>"R40”</small></div>
-                      <div class="col-3 toybox"><small>1:1</small></div>
-                      <div class="col-2 toybox"><small>STL</small></div>
-                      <div class="col-3 toybox">
-                        <a class="button" href="https://drive.google.com/uc?export=download&id=1qqnBMPsf1PmDYKKR3VR1C-dbfWz3aXw6"><small>Download_Some_parts</small></a>
-                      </div>
-                    </div> -->
           </div>
         </div>
+        <!--target  collapseExample -->
+
+
+        <!-- <div class="row toybox">
+                  <div class="col-3 toybox"><small>"R40”</small></div>
+                  <div class="col-3 toybox"><small>1:1</small></div>
+                  <div class="col-2 toybox"><small>STL</small></div>
+                  <div class="col-3 toybox">
+                    <a class="button" href="https://drive.google.com/uc?export=download&id=1qqnBMPsf1PmDYKKR3VR1C-dbfWz3aXw6"><small>Download_Some_parts</small></a>
+                  </div>
+                </div> -->
+
         <!--text-->
 
         <div class="col-md-6">
